# DarkeVox

./: .gitignore  DIRECTIVE.md  PLAN.md  README.md  TESTPLAN.md  pyproject.toml
.claude/skills/darkevox-guidelines/: SKILL.md
.claude/skills/darkevox-guidelines/references/: architecture.md
.claude/skills/darkevox-ui-style/: SKILL.md
.claude/skills/no-slop-writing/: SKILL.md
.claude/skills/no-slop-writing/references/: banned-patterns.md  craft.md  delivery-methods.md
.claude/skills/refinement-loop/: SKILL.md
darkevox/: __init__.py  app.py  config.py  controller.py  logging_setup.py  state.py  update.py
darkevox/audio/: __init__.py  capture.py  hotkeys.py  segmenter.py
darkevox/context/: __init__.py  provider.py
darkevox/inject/: __init__.py  clipboard.py  focus.py  injector.py
darkevox/polish/: __init__.py  llm.py  pipeline.py  prompts.py
darkevox/stt/: __init__.py  engine.py  models.py
darkevox/ui/: __init__.py  buttons.py  draft.py  firstrun.py  hud.py  icons.py  interaction.py  main_window.py  motion.py  panel.py  settings.py  status.py  theme.py  tray.py
tests/: test_app_config.py  test_capture.py  test_config.py  test_controller.py  test_draft.py  test_focus.py  test_hotkeys.py  test_injector.py  test_interaction.py  test_llm.py  test_logging_setup.py  test_pipeline.py  test_prompts.py  test_provider.py  test_segmenter.py  test_settings.py  test_single_instance.py  test_status.py  test_stt.py  test_theme.py  test_update.py
